src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;

}
/* section {
  background: inherit;
} */


@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-creepster: var(--font-creepster);
  --font-imfell: var(--font-imfell);
  --font-body: var(--font-body);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  /* background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif; */
}

